examples/example_41/example_41.v
(* -*- coq-prog-args: ("-emacs" "-nois") -*- *)
Require Import Foo.A.
Fail Check foo.
